k8s/rails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app
  namespace: budget-app
  labels:
    app: budget-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget-app
  template:
    metadata:
      labels:
        app: budget-app
    spec:
      imagePullSecrets:
        - name: regcred  # <- reference to Docker Hub secret
      containers:
        - name: web
          image: technicalaisha/budget-app:latest
          ports:
            - containerPort: 3000
