k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-app
  namespace: budget-app
spec:
  selector:
    app: budget-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
